--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,7 +1,7 @@
-- icon:
+- icon: services/web-dev.svg
   title: Web app development
   description: Our full-stack engineers develop custom mobile-first web products using the Agile methodology. You can start with a simple MVP to test your idea, smoothly pivot and then improve the app to become a high-load solution with millions of visits. With a responsive front end and a reliable back end, of course.
-- icon:
+- icon: services/mobile-dev.svg
   title: Mobile app development
   description: Excellent look and feel are essential for a successful mobile product, and that's what we focus on when developing iOS and Android apps for our clients. Whether it's a native or cross-platform app, we never compromise speed and mobile interaction design.
 
