--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,8 +1,10 @@
-image1: test1.jpg
-image2: test1.jpg
-image3: test1.jpg
-image4: test1.jpg
+images:
+  - about/img-1.webp
+  - about/img-2.webp
+  - about/img-3.webp
+  - about/img-4.webp
 title: About us
-description1: We built our company with a dream to create quality products that improve people's lives. Every day, we work hard to achieve this dream again and again.
-description2: Startups and emerging companies are our favorite allies. And we are happy to be the technical partner they recommend to their peers without a doubt.
-description3: Trust us to develop your web or mobile app, and we'll help you at every stage of the product life cycle – from the concept to the golden unicorn.
+descriptions:
+  - We built our company with a dream to create quality products that improve people's lives. Every day, we work hard to achieve this dream again and again.
+  - Startups and emerging companies are our favorite allies. And we are happy to be the technical partner they recommend to their peers without a doubt.
+  - Trust us to develop your web or mobile app, and we'll help you at every stage of the product life cycle – from the concept to the golden unicorn.
