--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,23 @@
 - name: Company
-  children: 
+  children:
     - name: About us
       link: /#about
     - name: Careers
       link: /careers
+  id:
 - name: Services
   link: /#services
+  id: services-id
 - name: How it works
   link: /#how-it-works
+  id: how-it-works-id
 - name: Our Clients
   link: /#our-clients
+  id: our-clients-id
 - name: Blog
   link: /blogg.html
+  id:
 - name: Contact us
   link: /#
   button: true
+  id:
