--- a/_data/clients.yml
+++ b/_data/clients.yml
@@ -6,15 +6,19 @@ clients:
     description: The aim of the project was to make art accessible to anyone, anywhere. Today, WikiArt features over 250,000 artworks by 5,000 artists, localized to 8 languages. These artworks are displayed in museums, universities and town halls of more than 100 countries, yet most of it is not on public view. The client claims that they are planning to cover the entire art history of the Earth, from cave artworks to modern private collections.
     link: /case-study/wikiart
     image: clients/wiki.webp
+    backgroundColor: #E5E5E5
   - title: SmartLane
     description: A B2B startup for car dealers who sell used vehicles across the USA via the marketplace. The developed application has a whole range of functions to support the workflows of car dealers and inspectors, like auctions workflow, live and proxy bidding, post-auction counter offering, and deal closing. The solution is integrated with different APIs to gather information about vehicles, helping dealers make the right decisions at auctions.
     link: /case-study/smartlane
     image: clients/smart-lane.webp
+    backgroundColor: #3455A0
   - title: Admit.me
     description: Admit.me is a free virtual admissions coach that offers step-by-step guides through the admissions process of the best schools. The developed solution allows for generating personalized admissions programs based on the applicant's background and goals. Admit.me provides tools and lessons designed to optimize the applicant's admissions chances by framing the applicant's thinking and informing critical admissions decisions.
     link: /case-study/admit-me
     image: clients/admit.webp
+    backgroundColor:
   - title: YOY
     description: A cross-platform mobile application that helps to learn the Ukrainian language to kids whose native language is Hungarian or Romanian. Developed for schoolchildren, it is simple, logical, concise, and at the same time, attractive and low resource-consuming to work fast, even on old mobile devices. The app has been created in partnership with a digital agency, "Friends of Brands," for the program of cooperation between Ukraine, Finland, and the EU aims to support the reform of the New Ukrainian School (NUSch).
     link: /case-study/yoy
     image: clients/yoy.webp
+    backgroundColor: #00893A
