--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,8 +1,9 @@
 title: FEEL FREE TO CONTACT US
 email: contact@implex.dev
 subtitle: Looking forward to connecting with you
-linkedinHref: https://www.linkedin.com/company/implex-dev/about/
-youtubeHref: https://www.youtube.com/@implex6589
 creator: © 2020 Implex. All rights reserved.
-linkedinIcon: linkedin.svg
-youtubeIcon: youtube.svg
+icons:
+  - icon: linkedin.svg
+    href: https://www.linkedin.com/company/implex-dev/about/
+  - icon: youtube.svg
+    href: https://www.youtube.com/@implex6589
