--- a/_data/about.yml
+++ b/_data/about.yml
@@ -3,7 +3,7 @@ images:
   - about/img-2.webp
   - about/img-3.webp
   - about/img-4.webp
-title: About us
+title: About Implex
 descriptions:
   - We built our company with a dream to create quality products that improve people's lives. Every day, we work hard to achieve this dream again and again.
   - Startups and emerging companies are our favorite allies. And we are happy to be the technical partner they recommend to their peers without a doubt.
