--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,10 +12,10 @@
   link: /#how-it-works
   id: how-it-works
 - name: Our Clients
-  link: /#our-clients
+  link: /case-study
   id: our-clients
 - name: Blog
-  link: /#blog
+  link: /blog
   id: blog
 - name: Contact Us
   link: /#contact-us
