--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@
     - name: About us
       link: /#about
     - name: Careers
-      link: /careers
+      link: /careers/
   id: company
 - name: Services
   link: /#services
@@ -12,10 +12,10 @@
   link: /#how-it-works
   id: how-it-works
 - name: Our Clients
-  link: /case-study
+  link: /case-study/
   id: our-clients
 - name: Blog
-  link: /blog
+  link: /blog/
   id: blog
 - name: Contact Us
   link: '#contact-us'
