add needed alt attr and try to gzip all site files

--- a/_config.yml
+++ b/_config.yml
@@ -24,5 +24,11 @@ defaults:
       path: ""
     values:
       layout: "default"
+  - scope:
+      path: ""
+    values:
+      JEKYLL_ENV": "production"
 include: ['_pages']
 imgPrefix: "assets/img/"
+plugins:
+  - jekyll-gzip
