--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -5,19 +5,23 @@ articles:
     description: We are thrilled to announce that Clutch have recognized us as one of the 250 best-performing software development companies in Ukraine.
     date: 26.05.2021
     img: articles/clutch.png
+    alt:
     link:
   - title: Tips for Outsourcing MVP Development. Part II
     description: Team, requirements management, sprint planning  estimation and communication for successful MVP delivery — based on our case study of building an MVP in 3.5 months for the U.S. automotive startup
     date: 16.05.2021
     img: articles/tips-2.jpg
+    imgAlt:
     link:
   - title: Tips for Outsourcing MVP Development. Part I
     description: Project preparation, documentation and right tech stack — based on our case study of building an MVP in 3.5 months for the U.S. automotive startup
     date: 25.04.2021
     img: articles/tips-1.jpg
+    imgAlt:
     link:
   - title: Is It Possible to Find 100+ Tech Specialists at Affordable Rates in a Fortnight? Yes!
     description: We analyzed the market, various hiring channels, and payment models. Our experience has shown you CAN subcontract 100 specialists in a fortnight, but boy, will you have to work for it.
     date: 07.01.2021
     img: articles/rates.jpg
+    imgAlt:
     link:
