--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -7,5 +7,7 @@ creator: © 2020 Implex. All rights reserved.
 icons:
   - icon: linkedin.svg
     href: https://www.linkedin.com/company/implex-dev/about/
+    alt:
   - icon: youtube.svg
     href: https://www.youtube.com/@implex6589
+    alt:
