--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,12 @@ defaults:
       path: ""
     values:
       layout: "default"
+  - scope:
+      path: ""
+    values:
+      JEKYLL_ENV": "production"
 include: ['_pages']
 imgPrefix: "assets/img/"
 plugins:
+  - jekyll-gzip
   - jekyll-sitemap
