--- a/_data/about.yml
+++ b/_data/about.yml
@@ -9,7 +9,7 @@ images:
     alt:
 title: About Implex
 descriptions:
-  - 1We built our company with a dream to create quality products that improve people's lives. Every day, we work hard to achieve this dream again and again.
+  - We built our company with a dream to create quality products that improve people's lives. Every day, we work hard to achieve this dream again and again.
   - Trust us to develop your web or mobile app, and we'll help you at every stage of the product life cycle – from the concept to the golden unicorn.
   - Implex has been selected among the <a class="link" href="https://www.designrush.com/agency/outsourcing-companies">Top 30
     Outsourcing Software Development Companies</a> by DesignRush
