--- a/_data/clients.yml
+++ b/_data/clients.yml
@@ -1,6 +1,6 @@
-title: Our Clients
-subTitle: We offer a wide range of services,
-  and here are some of our best projects.
+title: Our Featured Use Cases
+subTitle: "We offer a wide range of services,<br>
+          and here are some of our best projects."
 clients:
   - title: "Flutter Edtech App for primary school students in national minorities"
     description: 'A cross-platform mobile application that helps to learn the Ukrainian language to kids whose native language is Hungarian or Romanian. Developed for schoolchildren, it is simple, logical, concise, and at the same time, attractive and low resource-consuming to work fast, even on old mobile devices. The app has been created in partnership with a digital agency, "Friends of Brands", for the program of cooperation between Ukraine, Finland, and the EU aims to support the reform of the New Ukrainian School (NUSch).'
