Fix typo in alt for the picture in About us section

--- a/_data/about.yml
+++ b/_data/about.yml
@@ -2,7 +2,7 @@ images:
   - img: about/img-1.webp
     alt: "Girls pair programming"
   - img: about/img-2.webp
-    alt: "Testing Wikiart.org on a desktiop"
+    alt: "Testing Wikiart.org on a desktop"
   - img: about/img-3.webp
     alt: "Developing front-end"
   - img: about/img-4.webp
