Adding alt for linkedin and youtube icons

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -7,7 +7,7 @@ creator: © 2020 Implex. All rights reserved.
 icons:
   - icon: linkedin.svg
     href: https://www.linkedin.com/company/implex-dev/about/
-    alt:
+    alt: "LinkedIn logo"
   - icon: youtube.svg
     href: https://www.youtube.com/@implex6589
-    alt:
+    alt: "Youtube logo"
