--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -38,11 +38,12 @@ jobs:
             git config --global user.email github-actions@github.com
       - name: Push files to target
         run: |
-          echo "label 10:"; ls -l; pwd
+          echo "label 10: "; ls -l; pwd
           rsync -r ./build/* ./deploy --delete --exclude .github
           cd deploy
           echo ${{ inputs.envUrl }} > CNAME
-          echo "label 20:"; ls -l; pwd
+          echo "label 20: "; ls -l; pwd
+          echo "label 30: "; cat CNAME; cat _config.yml
           git add .
           git commit -m $GITHUB_SHA
           git push
