--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -13,5 +13,6 @@ jobs:
       envUrl: implex.dev
       envRepoName: implex-code-repo/implex-site-prod
       GA_id: UA-163722668-1
+      TM_id: GTM-5TK5WJ8
     secrets:
       envPAT: ${{ secrets.PAT }}
