--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -14,6 +14,9 @@ on:
       GA_id:
         required: true
         type: string
+      TM_id:
+        required: true
+        type: string
     secrets:
       envPAT:
         required: true
