--- a/_data/clients.yml
+++ b/_data/clients.yml
@@ -10,10 +10,10 @@ clients:
     backgroundColor: '#0C2E4C'
     whiteText: true
   - title: "Turning unusual vision into a novel map-based web product"
-    description: "Quotium's web application transforms a mind map with cases into an innovative map-based website with intuitive navigation. Mental maps are the primary content and navigation method with an easy-to-read visualization. The web app is integrated with Quotium's knowledge base and maintains a high level of website performance. The site includes data on 600+ AI firms in Europe and 200+ open APIs, and excellent Google PageSpeed Insights ratings."
-    link: /case-study/quotium
-    image: clients/Quotium_preview_cover-1280.webp
-    imageAlt: "Quotium novel map-based web product"
+    description: "CyberQuantic's web application transforms a mind map with cases into an innovative map-based website with intuitive navigation. Mental maps are the primary content and navigation method with an easy-to-read visualization. The web app is integrated with CyberQuantic's knowledge base and maintains a high level of website performance. The site includes data on 600+ AI firms in Europe and 200+ open APIs, and excellent Google PageSpeed Insights ratings."
+    link: /case-study/cyberquantic
+    image: clients/CyberQuantic_preview_cover-1280.webp
+    imageAlt: "CyberQuantic novel map-based web product"
   - title: "Flutter Edtech App for primary school students"
     description: 'A cross-platform mobile application that helps to learn the Ukrainian language to kids whose native language is Hungarian or Romanian. Developed for schoolchildren, it is simple, logical, concise, and at the same time, attractive and low resource-consuming to work fast, even on old mobile devices. The app has been created in partnership with a digital agency, "Friends of Brands", for the program of cooperation between Ukraine, Finland, and the EU aims to support the reform of the New Ukrainian School (NUSch).'
     link: /case-study/yoy
